src/components/header/Header.module.scss
@import "src/styles/variables";

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;

  width: 100%;
  margin-bottom: 30px;
}

.wrapper {
  display: flex;
  align-items: center;
}

.change_theme, .logo {
  margin-right: 20px;
  cursor: pointer;
}

.change_theme {
  outline: none;
  border: none;
  background: transparent;
}

.logo {
  svg {
    width: 65px;
    height: 65px;
  }
}

.title {
  text-transform: uppercase;
  font-weight: bold;
  font-size: 25px;
  color: $primary_color;
}

@media (max-width: $size-sm) {
  .header {
    flex-direction: column;
  }

  .wrapper {
    width: 100%;
    padding: 0 15px;
    margin-bottom: 20px;

    &:last-of-type{
      justify-content: space-between;
      margin-bottom: 0;
    }
  }

  .change_theme {
    order: 2;
  }
}

